it is working now issue was regarding how to get data in stream